2009-05-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for property table.

	* assembly-with-property.cs: Added more stuff

2009-05-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c (next_token): Stop taking chars
	for a token when encountering the first delimiter char.

	This makes the parser less brain-dead when encountering
	sequences like "foo()".

2009-05-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for propertymap table.

	* assembly-with-property.cs: New test file for producing tests
	for property tables.

	* Makefile: Add new dependencies.

2009-05-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for event table.
	
2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for event map table.

	* assembly-with-events.cs: New test file for producing tests
	for cattr table.

	* Makefile: Add new dependency.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for standalonesig table.

	* assembly-with-complex-type.cs: Added more stuff for
	field layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for field layout table.

	* assembly-with-complex-type.cs: Added more stuff for
	field layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for class layout table.

	* assembly-with-complex-type.cs: Added more stuff for
	class layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for decl security table.

	* assembly-with-cas.cs: New test file for producing tests
	for cattr table.

	* Makefile: Add new dependencies and do some cleanup.

2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for field marshal table.

2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for cattr table.

	* assembly-with-cattr.cs: New test file for producing tests